src/objects/Project__c.object
<CustomObject>
    <description>Represents a Project record</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the project is active or archived.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Client related to the Project</description>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ends_on__c</fullName>
        <description>End Date of the Project</description>
        <inlineHelpText>Optional</inlineHelpText>
        <label>Ends on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional information</description>
        <inlineHelpText>Notes can be any additional information you’d like to include, such as a statement of work or comments on the project scope. Administrators can change who sees project notes in Account Settings.</inlineHelpText>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>The Project Code helps identity your project.</description>
        <inlineHelpText>Optional. The Project Code helps identity your project. You can use any combo of numbers or letters.</inlineHelpText>
        <label>Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starts_on__c</fullName>
        <description>Start Date of the Project</description>
        <inlineHelpText>Optional</inlineHelpText>
        <label>Starts on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_id__c</fullName>
        <description>Harvest Project ID</description>
        <externalId>true</externalId>
        <label>ProjectID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>